--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,5 @@
-# EditorConfig is awesome: https://EditorConfig.org
+# https://EditorConfig.org
 
-# top-most EditorConfig file
 root = true
 
 [*]
@@ -11,15 +10,18 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.json]
+indent_size = 2
+insert_final_newline = false
+
 [Makefile]
 indent_style = tab
 
 [*.md]
 trim_trailing_whitespace = false
 
-[*.json]
-indent_size = 2
-insert_final_newline = false
+[*.nix]
+ident_size = 2
 
 [*.yaml]
 indent_size = 2
