--- a/.github/workflows/test-flake.yaml
+++ b/.github/workflows/test-flake.yaml
@@ -14,5 +14,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Run make test
-        run: make test
+      - name: Run make help
+        run: make help
