--- a/.github/workflows/test-flake.yaml
+++ b/.github/workflows/test-flake.yaml
@@ -14,5 +14,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      # https://github.com/cachix/install-nix-action
+      - name: Install Nix
+        uses: cachix/install-nix-action@v26
+        with:
+          nix_path: nixpkgs=channel:nixos-23.11
       - name: Run make help
         run: make help
