--- a/.github/workflows/test-flake.yaml
+++ b/.github/workflows/test-flake.yaml
@@ -3,11 +3,7 @@ name: test-flake
 run-name: Test flake
 on:
   push:
-    # branches:
-    #   - main
   pull_request:
-    branches:
-      - main
 jobs:
   run-make-test:
     runs-on: ubuntu-latest
@@ -19,5 +15,5 @@ jobs:
         uses: cachix/install-nix-action@v26
         with:
           nix_path: nixpkgs=channel:nixos-23.11
-      - name: Run make help
-        run: make help
+      - name: Run make test
+        run: make test
