Add display link prefetch for build

--- a/.github/workflows/test-build.yaml
+++ b/.github/workflows/test-build.yaml
@@ -18,4 +18,6 @@ jobs:
       - name: Build
       # Using he equivalent of `nixos-rebuild build --flake .#x13` as
       # the nix action does not have nixos-rebuild
-        run: nix build .#nixosConfigurations.x13.config.system.build.toplevel
+        run: |
+          nix-prefetch-url --name displaylink-580.zip https://www.synaptics.com/sites/default/files/exe_files/2023-08/DisplayLink%20USB%20Graphics%20Software%20for%20Ubuntu5.8-EXE.zip
+          nix build .#nixosConfigurations.x13.config.system.build.toplevel
