--- a/.github/workflows/check-flake.yaml
+++ b/.github/workflows/check-flake.yaml
@@ -1,6 +1,6 @@
-# Workflow to test the flake
-name: test-flake
-run-name: Test flake
+# Workflow to check/test the flake
+name: check-flake
+run-name: Check flake
 on:
   push:
   pull_request:
