--- a/.github/workflows/build-nixos.yaml
+++ b/.github/workflows/build-nixos.yaml
@@ -5,7 +5,10 @@ on:
   push:
   pull_request:
 jobs:
-  build-x13:
+  build-os:
+    strategy:
+      matrix:
+        host: [x13, x1c]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,24 +19,8 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-23.11
       - name: Build
-      # Using he equivalent of `nixos-rebuild build --flake .#x13` as
-      # the nix action does not have nixos-rebuild
+      # Using he equivalent of `nixos-rebuild build --flake .` as
+      # the nix action does not have `nixos-rebuild``
         run: |
           nix-prefetch-url --name displaylink-580.zip https://www.synaptics.com/sites/default/files/exe_files/2023-08/DisplayLink%20USB%20Graphics%20Software%20for%20Ubuntu5.8-EXE.zip
-          nix build .#nixosConfigurations.x13.config.system.build.toplevel
-  build-x1c:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      # https://github.com/cachix/install-nix-action
-      - name: Install Nix
-        uses: cachix/install-nix-action@v26
-        with:
-          nix_path: nixpkgs=channel:nixos-23.11
-      - name: Build
-      # Using he equivalent of `nixos-rebuild build --flake .#x13` as
-      # the nix action does not have nixos-rebuild
-        run: |
-          nix-prefetch-url --name displaylink-580.zip https://www.synaptics.com/sites/default/files/exe_files/2023-08/DisplayLink%20USB%20Graphics%20Software%20for%20Ubuntu5.8-EXE.zip
-          nix build .#nixosConfigurations.x1c.config.system.build.toplevel
+          nix build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel
