--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -26,7 +26,7 @@ jobs:
           make bootstrap-hm
         env:
           USER: ${{ matrix.account }}
-          HOST: x13
+          HOSTNAME: x13
 
 
 
