--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -23,7 +23,7 @@ jobs:
         uses: DeterminateSystems/magic-nix-cache-action@v2
       - name: Build
         run: |
-          make bootstrap-hm
+          $HOSTNAME make bootstrap-hm
         env:
           USER: ${{ matrix.account }}
           HOSTNAME: x13
