Try makefile hm

--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -23,14 +23,16 @@ jobs:
         uses: DeterminateSystems/magic-nix-cache-action@v2
       - name: Build
         run: |
-          nix build --no-link .#homeConfigurations.timh@x13.activationPackage
-          nix path-info .#homeConfigurations.timh@x13.activationPackage
+          make bootstrap-hm
         env:
           HOSTNAME: x13
           USER: ${{ matrix.account }}
 
 
 #          make bootstrap-hm
+
+          # nix build --no-link .#homeConfigurations.timh@x13.activationPackage
+          # nix path-info .#homeConfigurations.timh@x13.activationPackage
 
 
 
