--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -22,14 +22,13 @@ jobs:
       - name: Cache Nix store
         uses: DeterminateSystems/magic-nix-cache-action@v2
       - name: Build
+      # It isn't possible to build and activate completely due to home directory permissions
+      # Just build - See `make bootstrap-hm`
         run: |
-          nix build --no-link .#homeConfigurations.timh@x13.activationPackage
-          `nix path-info .#homeConfigurations.timh@x13.activationPackage`/activate
-
+          nix build --no-link .#homeConfigurations.$USER@$HOSTNAME.activationPackage
         env:
           HOSTNAME: x13
           USER: ${{ matrix.account }}
-          HOME: /home/${{ matrix.account }}
 
 
 #          make bootstrap-hm
