--- a/.github/workflows/build-nixos.yaml
+++ b/.github/workflows/build-nixos.yaml
@@ -10,6 +10,7 @@ jobs:
       matrix:
         host: [x13, x1c]
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,3 +28,4 @@ jobs:
         run: |
           nix-prefetch-url --name displaylink-580.zip https://www.synaptics.com/sites/default/files/exe_files/2023-08/DisplayLink%20USB%20Graphics%20Software%20for%20Ubuntu5.8-EXE.zip
           nix build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel
+        timeout-minutes: 15
