--- a/.github/workflows/check-flake.yaml
+++ b/.github/workflows/check-flake.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   run-make-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -17,3 +18,4 @@ jobs:
           nix_path: nixpkgs=channel:nixos-23.11
       - name: Run make test
         run: make test
+        timeout-minutes: 5
