--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -24,5 +24,8 @@ jobs:
       # It isn't possible to build and activate completely due to home directory limitations
       # in the GitHub Actions environment. So just build - See `make bootstrap-hm`
         run: |
-          nix build --no-link .#homeConfigurations.${{ matrix.user }}@${{ matrix.host }}.activationPackage --debug --verbose
+          nix-shell -p home-manager gnumake --run "make build-hm-dry-run"
+        env:
+          USER: ${{ matrix.user }}
+          HOSTNAME: ${{ matrix.host }}
         timeout-minutes: 15
