--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -24,7 +24,7 @@ jobs:
       # It isn't possible to build and activate completely due to home directory limitations
       # in the GitHub Actions environment. So just build - See `make bootstrap-hm`
         run: |
-          nix-shell -p home-manager gnumake --run "make build-hm-dry-run"
+          nix-shell -p home-manager gnumake --run "make build-hm"
         env:
           USER: ${{ matrix.user }}
           HOSTNAME: ${{ matrix.host }}
