--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -15,17 +15,24 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      # https://github.com/cachix/install-nix-action
+        # https://github.com/cachix/install-nix-action
       - name: Install Nix
         uses: cachix/install-nix-action@v26
         with:
           nix_path: nixpkgs=channel:nixos-23.11
       - name: Build
-      # Only doing `dry-run` as a full build has begun to
-      # hang at `hm_fontconfigconf.d10hmfonts.conf.drv`
+        # Only doing `dry-run` as a full build has begun to
+        # hang at `hm_fontconfigconf.d10hmfonts.conf.drv`
         run: |
           nix-shell -p home-manager gnumake --run "make build-hm-dry-run"
         env:
+          # Used by the makefile
           USER: ${{ matrix.user }}
           HOSTNAME: ${{ matrix.host }}
+        # Previous version of the `Build step`, which started to hang at `hm_fontconfigconf.d10hmfonts.conf.drv`
+        #
+        # It isn't possible to build and activate completely due to home directory limitations
+        # in the GitHub Actions environment. So just build - See `make bootstrap-hm`
+        # run: |
+        #   nix build --no-link .#homeConfigurations.${{ matrix.user }}@${{ matrix.host }}.activationPackage
         timeout-minutes: 15
