--- a/.github/workflows/build-nixos.yaml
+++ b/.github/workflows/build-nixos.yaml
@@ -19,9 +19,12 @@ jobs:
         uses: cachix/install-nix-action@v26
         with:
           nix_path: nixpkgs=channel:nixos-23.11
-      # https://github.com/DeterminateSystems/magic-nix-cache-action
-      - name: Cache Nix store
-        uses: DeterminateSystems/magic-nix-cache-action@v2
+      # https://nix.dev/tutorials/nixos/continuous-integration-github-actions
+      - name: Cachix cache
+        uses: cachix/cachix-action@v14
+        with:
+          name: timhourigan
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - name: Build
       # Using he equivalent of `nixos-rebuild build --flake .` as
       # the nix action does not have `nixos-rebuild``
