--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,9 +5,12 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      actions:
+      github-actions:
         applies-to: version-updates
         patterns:
           - "*"
     commit-message:
       prefix: "chore(deps):"
+      include: "scope"
+    reviewers:
+      - "timhourigan"
