--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -11,6 +11,6 @@ updates:
           - "*"
     commit-message:
       prefix: "chore(deps):"
-      include: "scope"
+      # include: "scope"
     reviewers:
       - "timhourigan"
