--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      github-actions:
+      actions:
         applies-to: version-updates
         patterns:
           - "*"
