--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -28,16 +28,16 @@ jobs:
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - name: Build
         # Only doing `dry-run` - See below for the previous version of the `Build` step
-        run: |
-          nix-shell -p home-manager gnumake --run "make build-hm-dry-run"
-        env:
-          # Used by the makefile
-          USER: ${{ matrix.user }}
-          HOSTNAME: ${{ matrix.host }}
+        # run: |
+        #   nix-shell -p home-manager gnumake --run "make build-hm-dry-run"
+        # env:
+        #   # Used by the makefile
+        #   USER: ${{ matrix.user }}
+        #   HOSTNAME: ${{ matrix.host }}
         # Previous version of the `Build` step, which started to hang at `hm_fontconfigconf.d10hmfonts.conf.drv`
         #
         # It isn't possible to build and activate completely due to home directory limitations
         # in the GitHub Actions environment. So just build - See `make bootstrap-hm`
-        # run: |
-        #   nix build --no-link .#homeConfigurations.${{ matrix.user }}@${{ matrix.host }}.activationPackage
+        run: |
+          nix build --no-link .#homeConfigurations.${{ matrix.user }}@${{ matrix.host }}.activationPackage
         timeout-minutes: 15
