--- a/.github/workflows/build-nixos.yaml
+++ b/.github/workflows/build-nixos.yaml
@@ -9,7 +9,7 @@ jobs:
   build-os:
     strategy:
       matrix:
-        host: [opx7070, x13, x1c]
+        host: [opx7070, sid, x13, x1c]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
