--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -12,7 +12,8 @@ jobs:
         user: [timh]
         host: [opx7070, sid, x13, x1c]
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    # FIXME
+    timeout-minutes: 300
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -34,4 +35,4 @@ jobs:
           # Used by the makefile
           USER: ${{ matrix.user }}
           HOSTNAME: ${{ matrix.host }}
-        timeout-minutes: 15
+        # FIXME timeout-minutes: 15
