--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         user: [timh]
-        host: [opx7070, sid, x13, x1c]
+        host: [m625q, opx7070, sid, x13, x1c]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
