Remove nom for Actions

--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -33,4 +33,5 @@ jobs:
           # Used by the makefile
           USER: ${{ matrix.user }}
           HOSTNAME: ${{ matrix.host }}
+          NIX_OUTPUT_MONITOR: ""
         timeout-minutes: 15
