--- a/.github/workflows/update-flake.yaml
+++ b/.github/workflows/update-flake.yaml
@@ -19,4 +19,4 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-25.05
       - name: Update flake.lock
-        uses: DeterminateSystems/update-flake-lock@main
+        uses: DeterminateSystems/update-flake-lock@v27
