--- a/.github/workflows/update-flake.yaml
+++ b/.github/workflows/update-flake.yaml
@@ -30,6 +30,7 @@ jobs:
             automated
   # Copied from check-flake.yaml
   run-make-test:
+    needs: update-flake
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
@@ -42,5 +43,13 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-25.05
       - name: Run make test
-        run: make test
+        run: echo "TEST_RESULT=$(make test)" >> "$GITHUB_ENV"
         timeout-minutes: 5
+      - name: Comment PR with test result
+        uses: thollander/actions-comment-pull-request@v3
+        with:
+          message: |
+            ### Make test result
+            ```
+            ${{ env.TEST_RESULT }}
+            ```
