--- a/.github/workflows/update-flake.yaml
+++ b/.github/workflows/update-flake.yaml
@@ -6,6 +6,8 @@ on:
   schedule:
     - cron: "0 3 * * *"     # Every day at 03:00
   workflow_dispatch:        # Allow manual triggering
+env:
+  PR_NUMBER: ''
 jobs:
   update-flake:
     permissions:
