--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         user: [timh]
-        host: [m625q, mm, opx7070, sid, x13, x1c]
+        host: [bri7, m625q, mm, opx7070, sid, x13, x1c]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
