--- a/.github/workflows/build-home-manager.yaml
+++ b/.github/workflows/build-home-manager.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         user: [timh]
-        host: [bri7, m625q, mm, opx7070, sid, x13]
+        host: [bri7, m625q, mm, opx7070, sid, t490, x13]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
