--- a/.github/workflows/build-nixos.yaml
+++ b/.github/workflows/build-nixos.yaml
@@ -8,7 +8,7 @@ jobs:
   build-os:
     strategy:
       matrix:
-        host: [bri7, m625q, mm, opx7070, sid, x13]
+        host: [bri7, m625q, mm, opx7070, sid, t490, x13]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
